@@ -13,6 +13,8 @@ Deprecated
 Features added
 --------------
 
+* #7853: C and C++, support parameterized GNU style attributes.
+
 Bugs fixed
 ----------
 
